# libtorch_hello_world

./: .bazelrc  BUILD  MODULE.bazel  WORKSPACE.bazel  hello_world.cc  internal_configure.bzl  libtorch-BUILD.bazel
